--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="input-container">
                             <input type="text" name="name" id="name" class="form-item" autofocus>
                             <svg class="modal-svg" width="12px" height="12px">
-                                <use href="./images/symbol.svg#icon-modal-name"></use>
+                                <use class="vasyl" href="./images/symbol.svg#icon-modal-name"></use>
                             </svg>
                         </div>
                     </div>
