--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="input-container">
                             <input type="text" name="name" id="name" class="form-item" autofocus>
                             <svg class="modal-svg" width="12px" height="12px">
-                                <use class="vasyl" href="./images/symbol.svg#icon-modal-name"></use>
+                                <use class="icon-name" href="./images/symbol.svg#icon-modal-name"></use>
                             </svg>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                         <div class="input-container">
                             <input type="tel" name="tel" id="tel" class="form-item">
                             <svg class="modal-svg" width="12px" height="12px">
-                                <use href="./images/symbol.svg#icon-modal-tel"></use>
+                                <use class="icon-tel" href="./images/symbol.svg#icon-modal-tel"></use>
                             </svg>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                         <div class="input-container">
                             <input type="email" name="mail" id="mail" class="form-item">
                             <svg class="modal-svg" width="12px" height="12px">
-                                <use href="./images/symbol.svg#icon-modal-mail"></use>
+                                <use class="icon-email" href="./images/symbol.svg#icon-modal-mail"></use>
                             </svg>
                         </div>
                     </div>
