--- a/index.html
+++ b/index.html
@@ -112,18 +112,26 @@
                             </svg>
                         </div>
                     </div>
+                    <div class="modal-field">
                         <label for="comment" class="form-label">Комментарий</label>
                         <textarea name="comment" id="comment" rows="10" placeholder="Введите текст" class="comment-item"></textarea>
+                    </div>
                     <div class="modal-policy">
-                        <input type="checkbox" name="policy" value="" id="policy">
-                        <label for="policy" class="field-label">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+                        <label class="agreement-container">
+                            <input class="form-checkbox-input" type="checkbox" name="" value="" id="policy">
+                            <span class="custom-checkbox-container">
+                                <svg class="checkbox-icon" width="11px" height="8px">
+                                    <use href="./images/checkbox.svg#icon-checkbox" class="checkbox-icon-link"></use>
+                                </svg>
+                            </span>
+                            <span class="field-label">Соглашаюсь с рассылкой и принимаю <span class="agreements">Условия договора</span></span>
+                        </label>
                     </div>
                     <div class="submit-button">
                         <button type="submit" class="submit">Отправить</button>
                     </div>
                 </form>
             </div>
-
         </div>
         <!-- BENEFITS -->
         <section class="benefits">
@@ -403,6 +411,7 @@
                 </ul>
             </div>
         </section>
+        <!-- CLIENTS -->     
         <section class="clients">
             <div class="container">
                 <h2 class="title clients-title">
