--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <input class="form-checkbox-input" type="checkbox" name="" value="" id="policy">
                             <span class="custom-checkbox-container">
                                 <svg class="checkbox-icon" width="11px" height="8px">
-                                    <use href="./images/symbol.svg#icon-checkbox" class="checkbox-icon-link"></use>
+                                    <use href="./images/checkbox.svg#icon-checkbox" class="checkbox-icon-link"></use>
                                 </svg>
                             </span>
                             <span class="field-label">Соглашаюсь с рассылкой и принимаю <span class="agreements">Условия договора</span></span>
