added "visually hidden"

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="modal-policy">
                         <label class="agreement-container">
-                            <input class="form-checkbox-input" type="checkbox" name="" value="" id="policy">
+                            <input class="visually-hidden form-checkbox-input" type="checkbox" name="" value="" id="policy">
                             <span class="custom-checkbox-container">
                                 <svg class="checkbox-icon" width="11px" height="8px">
                                     <use href="./images/checkbox.svg#icon-checkbox" class="checkbox-icon-link"></use>
